Fix video download progress and tooltip clipping

--- a/styles/main.css
+++ b/styles/main.css
@@ -671,6 +671,25 @@ h1, h2, h3, h4, h5, h6 {
     transform: translate(-50%, 0);
 }
 
+.game-hover-tooltip.align-start {
+    left: 0;
+    transform: translate(0, -4px);
+}
+
+.game-hover-tooltip.align-start.active {
+    transform: translate(0, 0);
+}
+
+.game-hover-tooltip.align-end {
+    left: auto;
+    right: 0;
+    transform: translate(0, -4px);
+}
+
+.game-hover-tooltip.align-end.active {
+    transform: translate(0, 0);
+}
+
 .game-hover-tooltip-art {
     width: 68px;
     min-width: 68px;
